[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
rl_core = { path = "../rl_core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
# Note: Using tch-rs via rl_core, removed burn to avoid conflicts

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "rust-mlagents-learn"
path = "src/main.rs"
