[package]
name = "rl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# PyTorch bindings (tch-rs) - using latest version
tch = "0.18"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Existing dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
regex = "1.0"

# Note: Burn removed, using tch-rs instead for ONNX and TensorBoard support

[[bin]]
name = "rust-mlagents"
path = "src/bin/rust-mlagents.rs"

[[example]]
name = "train_sac_simple"
path = "examples/train_sac_simple.rs"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
